--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "tsc -p . -w --preserveWatchOutput",
-    "start:dev": "NODE_ENV=development nodemon --watch src src/server.ts",
+    "start:dev": "cross-env NODE_ENV=development nodemon --watch src src/server.ts",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "build:clean": "rm -rf dist && pnpm run build",
@@ -36,11 +36,14 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "eventemitter2": "^6.4.9",
     "express": "^5.1.0",
+    "googleapis": "^153.0.0",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "joi": "^17.12.0",
@@ -53,10 +56,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.1.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.30",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.7",
     "cross-env": "^7.0.3",
     "eslint": "^9.1.0",
@@ -70,6 +76,7 @@
     "nodemon": "^3.1.0",
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
+    "supertest": "^7.1.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -79,8 +86,7 @@
   "pnpm": {
     "notes": "Always use pnpm for all package management tasks.",
     "ignoredBuiltDependencies": [
-      "@prisma/engines",
-      "prisma"
+      "@prisma/engines"
     ]
   }
 }
